fix: add default token

--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,7 @@ inputs:
   github-token:
     description: 'GitHub token with the `repo` scope'
     required: true
+    default: ${{ github.token }}
 runs:
   using: 'node16'
   main: './dist/index.js'
