--- a/package.json
+++ b/package.json
@@ -24,8 +24,15 @@
     "openai": "^3.2.1"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.36.1",
     "@types/node": "^18.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@vercel/ncc": "^0.36.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.7.1",
     "typescript": "^5.0.4"
   }
 }
