--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,18 @@ jobs:
         with:
           ref: main
           
-      - name: Install dependencies
-        run: npm ci # replace with your build script command
-      - name: build
-        run: npm run package
+#      - name: Install dependencies
+#        run: npm ci # replace with your build script command
+#      - name: build
+#        run: npm run package
       - name: push to latest branch
         run: |
           git config --global user.name "Github bot"
           git config --global user.email "email@mail.com"
           git branch -D latest || true
           git checkout -b latest
+          npm ci
+          npm run package
           git add .
           git commit -m "Update latest branch"
-          git push origin latest
+          git push origin latest --force
