--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
         run: npm run package
       - name: Configure git
         run: |
+          git config --global user.name "Github bot"
+          git config --global user.email "email@mail.com"
+          rm .gitignore
           git checkout -b latest
           git add -A
           git commit -a -m "build"
