--- a/action.yml
+++ b/action.yml
@@ -5,8 +5,11 @@ inputs:
     description: 'OpenAI API key'
     required: true
   model:
-    description: 'OpenAI API key'
+    description: 'OpenAI model'
     default: 'text-davinci-003'
+  max_tokens:
+    description: 'OpenAI max_tokens (response length)'
+    default: '150'
   template:
     description: 'Prompt to use when requesting suggestions from the API. You can use {{issueBody}}, {{issueTitle}} placeholders.'
     required: true
