--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,12 @@ inputs:
     default: 'text-davinci-003'
   max_tokens:
     description: 'OpenAI max_tokens (response length)'
-    default: '150'
+    default: 150
+    type: number
+  find-related-issues:
+    description: 'OpenAI max_tokens (response length)'
+    default: true
+    type: boolean
   template:
     description: 'Prompt to use when requesting suggestions from the API. You can use {{issueBody}}, {{issueTitle}} placeholders.'
     required: true
