feat(ci): add test and husky commit check

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "outDir": "dist",
+    "rootDir": "./src",
     "sourceMap": true
   },
   "include": ["**/*.ts"],
