--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"No tests yet\"",
+    "prepare": "husky install",
+    "test": "jest --silent --verbose --coverage",
     "package": "ncc build --source-map --license licenses.txt"
   },
   "repository": {
@@ -24,15 +25,21 @@
     "openai": "^3.2.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
+    "@types/jest": "^26.0.15",
     "@types/node": "^18.16.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@vercel/ncc": "^0.36.1",
     "@typescript-eslint/parser": "^5.42.1",
-    "cross-env": "^7.0.3",
+    "@vercel/ncc": "^0.36.1",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.1",
+    "jest": "^26.6.3",
     "prettier": "^2.7.1",
-    "typescript": "^5.0.4"
+    "ts-jest": "^26.4.4",
+    "ts-node": "^10.9.1",
+    "typescript": "4.9.5"
   }
 }
