--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
           rm .gitignore
           git checkout -b latest
           git add -A
-          git commit -a -m "build"
+          git commit -a -m "build: latest build"
           git push -u origin latest --force
