--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,9 @@ jobs:
           ref: main
           
       - name: Install dependencies
-        run: npm ci # replace with your build script command
+        run: npm ci
+      - name: Run test
+        run: npm run test
       - name: build
         run: npm run package
       - name: Configure git
