--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,19 +23,7 @@ jobs:
       - name: build
         run: npm run package
 
-      - name: Create tag
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.changelog.outputs.tag }}
-          release_name: ${{ steps.changelog.outputs.tag }}
-          body: ${{ steps.changelog.outputs.clean_changelog }}
-          draft: false
-          prerelease: true
-
-
-      - name: create release
+      - name: Create release
         uses: actions/create-release@v1
         if: ${{ steps.changelog.outputs.skipped == 'false' }}
         env:
