--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,20 +10,13 @@ jobs:
       - name: Checkout main branch
         uses: actions/checkout@v3
         with:
-          ref: main
-      - name: Install dependencies
-        run: npm ci
-      - name: build
-        run: npm run package
-      - name: remove .gitignore
-        run: rm .gitignore
+          ref: latest
       - name: conventional Changelog Action
         id: changelog
         uses: TriPSs/conventional-changelog-action@v3.18.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           version-file: './package.json,./package-lock.json'
-          git-branch: latest
 
       - name: Create release
         uses: actions/create-release@v1
@@ -34,6 +27,5 @@ jobs:
           tag_name: ${{ steps.changelog.outputs.tag }}
           release_name: ${{ steps.changelog.outputs.tag }}
           body: ${{ steps.changelog.outputs.clean_changelog }}
-          commitish: latest
           draft: true
           prerelease: true
