--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "type-chef-di": "^0.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
