--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "openai": "^3.2.1",
+    "openai": "4.20.1",
     "type-chef-di": "^0.3.1"
   },
   "devDependencies": {
