fix: update readme and example config #7

--- a/examples/example-config.json
+++ b/examples/example-config.json
@@ -1,4 +1,5 @@
 {
+  "systemMessage": "You are an experienced software developer tasked with analyzing GitHub issues. Your role involves offering insightful feedback in response to these requests.",
   "sections": {
     "custom": [{
       "title": "Joke",
